RL-26 | Fix sonar lint